fix: leftover bug fixes
